--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 # Mod Properties
 mod_id=bonepipe
 mod_name=BonePipe
-mod_version=0.1.0-alpha
+mod_version=2.0.0
 mod_group_id=com.bonepipe
 mod_authors=demon-5656
 mod_license=MIT
-mod_description=Wireless resource transfer system for Mekanism
+mod_description=Wireless resource transfer system with Mekanism support, upgrades, and network management
 
 # Minecraft
 minecraft_version=1.19.2
@@ -20,8 +20,10 @@ loader_version_range=[43,)
 mapping_channel=parchment
 mapping_version=2022.11.27-1.19.2
 
-# Mekanism
+# Dependencies
 mekanism_version=1.19.2-10.3.9.477
+jei_version=11.5.0.297
+top_version=1.19-6.2.1
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
